fix(Breadcrumb): properly align the back button with the main item

--- a/src/components/Breadcrumb/style.styl
+++ b/src/components/Breadcrumb/style.styl
@@ -6,6 +6,7 @@
 
 
 .Breadcrumb__previousButton
+    margin-top 0.5rem
     margin-right 1.5rem
     cursor pointer
 
